# ftl-mv-translation

./: .gitignore  AUTHORS_AND_LICENSE.Translation.French.md  AUTHORS_AND_LICENSE.Translation.Korean.md  LICENSE.md  README.ko.md  README.md  blueprints.xml.append  desktop.ini  dlcBlueprints.xml.append  dlcEvents_anaerobic.xml.append  events.xml.append  events_abandoned.xml  events_boss.xml.append  events_civilian.xml  events_curator.xml  events_defeat.xml  events_droppoint.xml  events_duskbringer.xml  events_federation.xml  events_fleet.xml  events_generic.xml  events_ghost.xml  events_guards.xml  events_hektar.xml  events_leech.xml  events_lightspeed.xml  events_mantis.xml.append  events_morality.xml  events_multiverse.xml  events_outposts.xml  events_pirate.xml.append  events_rebel.xml.append  events_rock.xml.append  events_ruins.xml  events_salvaging.xml  events_separatist.xml  events_shells.xml  events_slug.xml.append  events_spider.xml  events_standard.xml  (+12 more)
auxfiles-ko/: multiverse.lua
auxfiles-ru/: multiverse.lua
docs/: drill-for-locale-updates.md  update-simulation.md
machine-json/: MT_Polish_from_Russian.py  MTjson_editor.py  measure.py  replace_special_characters.py
metadata.xml/: en.xml  ja.xml  readme.md  ru.xml
mvkoscript/: cli.py  xmltools.py
mvloc/: cli.py  xmltools.py
mvlocscript/: cli.py  fstools.py  ftl.py  localeformats.py  potools.py  update.py  xmltools.py
scripts/: en.csv  ko.csv  pyproject.toml
snippets/: ci-nightly-body.md  ci-nightly-machine.sh  ci-nightly.sh  deepltranslate.py  discord_5.4_missing_entries_en.py  fix_variable.py  (+38 more)
(+5862 files in other folders)
