[tool.poetry]
name = "ftl-mv-translation"
version = "0.1.0"
description = ""
authors = ["nedsociety <nedsociety@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
